--- a/contract-fees.html
+++ b/contract-fees.html
@@ -96,10 +96,12 @@
             </a>
           </li>
           <li class="contract-fees-miscellaneous5 list-item">
-            <span class="contract-fees-text1">GPS</span>
+            <a href="file-dd-21111111111.html" class="contract-fees-navlink5">
+              GPS
+            </a>
           </li>
           <li class="contract-fees-file-validation-signatures list-item">
-            <a href="file-dd-2111.html" class="contract-fees-navlink5">
+            <a href="file-dd-2111.html" class="contract-fees-navlink6">
               Data Match
             </a>
           </li>
@@ -152,13 +154,13 @@
           Interest Method
         </span>
         <button class="contract-fees-save button">
-          <span class="contract-fees-text2">Save</span>
+          <span class="contract-fees-text1">Save</span>
         </button>
         <a href="file-dd-2111111.html" class="contract-fees-next button">
           <svg viewBox="0 0 1024 1024" class="contract-fees-right-arrow">
             <path d="M366 708l196-196-196-196 60-60 256 256-256 256z"></path>
           </svg>
-          <span class="contract-fees-text3">Next</span>
+          <span class="contract-fees-text2">Next</span>
         </a>
         <input
           type="text"
