--- a/data-match.html
+++ b/data-match.html
@@ -96,10 +96,12 @@
             </a>
           </li>
           <li class="data-match-miscellaneous5 list-item">
-            <span class="data-match-text">GPS</span>
+            <a href="file-dd-21111111111.html" class="data-match-navlink6">
+              GPS
+            </a>
           </li>
           <li class="data-match-file-validation-signatures list-item">
-            <span class="data-match-text1">Data Match</span>
+            <span class="data-match-text">Data Match</span>
           </li>
         </div>
         <svg viewBox="0 0 1024 1024" class="data-match-check">
@@ -124,13 +126,13 @@
         <span class="data-match-is-this-an-original-contract">Cobuyer</span>
         <span class="data-match-is-there-anything-handwritten">VIN</span>
         <button class="data-match-save button">
-          <span class="data-match-text2">Save</span>
+          <span class="data-match-text1">Save</span>
         </button>
         <a href="file-dd-21111.html" class="data-match-next button">
           <svg viewBox="0 0 1024 1024" class="data-match-right-arrow">
             <path d="M366 708l196-196-196-196 60-60 256 256-256 256z"></path>
           </svg>
-          <span class="data-match-text3">Next</span>
+          <span class="data-match-text2">Next</span>
         </a>
         <input
           type="text"
