--- a/g-a-p.html
+++ b/g-a-p.html
@@ -91,10 +91,10 @@
             <a href="file-dd-2111111111.html" class="g-a-p-navlink4">Title</a>
           </li>
           <li class="g-a-p-miscellaneous5 list-item">
-            <span class="g-a-p-text1">GPS</span>
+            <a href="file-dd-21111111111.html" class="g-a-p-navlink5">GPS</a>
           </li>
           <li class="g-a-p-file-validation-signatures list-item">
-            <a href="file-dd-2111.html" class="g-a-p-navlink5">Data Match</a>
+            <a href="file-dd-2111.html" class="g-a-p-navlink6">Data Match</a>
           </li>
           <svg viewBox="0 0 1024 1024" class="g-a-p-check">
             <path
@@ -141,13 +141,13 @@
         <span class="g-a-p-is-this-an-original-contract">Dealer Name</span>
         <span class="g-a-p-is-there-anything-handwritten">Lienholder</span>
         <button class="g-a-p-save button">
-          <span class="g-a-p-text3">Save</span>
+          <span class="g-a-p-text2">Save</span>
         </button>
         <a href="file-dd-211111111.html" class="g-a-p-next button">
           <svg viewBox="0 0 1024 1024" class="g-a-p-right-arrow">
             <path d="M366 708l196-196-196-196 60-60 256 256-256 256z"></path>
           </svg>
-          <span class="g-a-p-text4">Next</span>
+          <span class="g-a-p-text3">Next</span>
         </a>
         <input
           type="text"
