--- a/g-p-s.html
+++ b/g-p-s.html
@@ -84,13 +84,13 @@
             </a>
           </li>
           <li class="g-p-s-miscellaneous4 list-item">
-            <span class="g-p-s-text">Title</span>
+            <a href="file-dd-2111111111.html" class="g-p-s-navlink5">Title</a>
           </li>
           <li class="g-p-s-miscellaneous5 list-item">
-            <span class="g-p-s-text1">GPS</span>
+            <span class="g-p-s-text">GPS</span>
           </li>
           <li class="g-p-s-file-validation-signatures list-item">
-            <a href="file-dd-2111.html" class="g-p-s-navlink5">Data Match</a>
+            <a href="file-dd-2111.html" class="g-p-s-navlink6">Data Match</a>
           </li>
           <svg viewBox="0 0 1024 1024" class="g-p-s-check">
             <path
@@ -149,13 +149,13 @@
         <span class="g-p-s-is-this-an-original-contract">Vehicle</span>
         <span class="g-p-s-is-there-anything-handwritten">GPS Providor</span>
         <button class="g-p-s-save button">
-          <span class="g-p-s-text3">Save</span>
+          <span class="g-p-s-text2">Save</span>
         </button>
         <button type="button" class="g-p-s-next button">
           <svg viewBox="0 0 1024 1024" class="g-p-s-right-arrow">
             <path d="M366 708l196-196-196-196 60-60 256 256-256 256z"></path>
           </svg>
-          <span class="g-p-s-text4">Next</span>
+          <span class="g-p-s-text3">Next</span>
         </button>
         <input
           type="text"
@@ -201,6 +201,8 @@
         <input type="radio" name="cobuyer" class="g-p-s-radiobutton11" />
         <input type="radio" name="cobuyer" class="g-p-s-radiobutton12" />
         <input type="radio" name="cobuyer" class="g-p-s-radiobutton13" />
+        <input type="radio" name="cobuyer" class="g-p-s-radiobutton14" />
+        <input type="radio" name="cobuyer" class="g-p-s-radiobutton15" />
         <span class="g-p-s-is-there-a-cobuyer">Yes</span>
         <span class="g-p-s-is-there-a-cobuyer01">Yes</span>
         <span class="g-p-s-is-there-a-cobuyer02">Yes</span>
@@ -208,13 +210,15 @@
         <span class="g-p-s-is-there-a-cobuyer04">Yes</span>
         <span class="g-p-s-is-there-a-cobuyer05">Yes</span>
         <span class="g-p-s-is-there-a-cobuyer06">Yes</span>
-        <span class="g-p-s-is-there-a-cobuyer07">No</span>
+        <span class="g-p-s-is-there-a-cobuyer07">Yes</span>
         <span class="g-p-s-is-there-a-cobuyer08">No</span>
         <span class="g-p-s-is-there-a-cobuyer09">No</span>
         <span class="g-p-s-is-there-a-cobuyer10">No</span>
         <span class="g-p-s-is-there-a-cobuyer11">No</span>
         <span class="g-p-s-is-there-a-cobuyer12">No</span>
         <span class="g-p-s-is-there-a-cobuyer13">No</span>
+        <span class="g-p-s-is-there-a-cobuyer14">No</span>
+        <span class="g-p-s-is-there-a-cobuyer15">No</span>
       </div>
     </div>
   </body>
