--- a/service-contract.html
+++ b/service-contract.html
@@ -100,10 +100,15 @@
             </a>
           </li>
           <li class="service-contract-miscellaneous5 list-item">
-            <span class="service-contract-text1">GPS</span>
+            <a
+              href="file-dd-21111111111.html"
+              class="service-contract-navlink5"
+            >
+              GPS
+            </a>
           </li>
           <li class="service-contract-file-validation-signatures list-item">
-            <a href="file-dd-2111.html" class="service-contract-navlink5">
+            <a href="file-dd-2111.html" class="service-contract-navlink6">
               Data Match
             </a>
           </li>
@@ -176,14 +181,14 @@
           Lienholder
         </span>
         <button class="service-contract-save button">
-          <span class="service-contract-text3">Save</span>
+          <span class="service-contract-text2">Save</span>
         </button>
-        <button type="button" class="service-contract-next button">
+        <a href="file-dd-2111111111.html" class="service-contract-next button">
           <svg viewBox="0 0 1024 1024" class="service-contract-right-arrow">
             <path d="M366 708l196-196-196-196 60-60 256 256-256 256z"></path>
           </svg>
-          <span class="service-contract-text4">Next</span>
-        </button>
+          <span class="service-contract-text3">Next</span>
+        </a>
         <input
           type="text"
           placeholder="If Different"
