--- a/title.html
+++ b/title.html
@@ -94,10 +94,10 @@
             <span class="title-text">Title</span>
           </li>
           <li class="title-miscellaneous5 list-item">
-            <span class="title-text1">GPS</span>
+            <a href="file-dd-21111111111.html" class="title-navlink5">GPS</a>
           </li>
           <li class="title-file-validation-signatures list-item">
-            <a href="file-dd-2111.html" class="title-navlink5">Data Match</a>
+            <a href="file-dd-2111.html" class="title-navlink6">Data Match</a>
           </li>
           <svg viewBox="0 0 1024 1024" class="title-check">
             <path
@@ -149,14 +149,14 @@
         <span class="title-is-this-an-original-contract">Owner</span>
         <span class="title-is-there-anything-handwritten">Cobuyer</span>
         <button class="title-save button">
-          <span class="title-text3">Save</span>
+          <span class="title-text2">Save</span>
         </button>
-        <button type="button" class="title-next button">
+        <a href="file-dd-21111111111.html" class="title-next button">
           <svg viewBox="0 0 1024 1024" class="title-right-arrow">
             <path d="M366 708l196-196-196-196 60-60 256 256-256 256z"></path>
           </svg>
-          <span class="title-text4">Next</span>
-        </button>
+          <span class="title-text3">Next</span>
+        </a>
         <input
           type="text"
           placeholder="placeholder"
