--- a/truthin-lending.html
+++ b/truthin-lending.html
@@ -104,10 +104,12 @@
             </a>
           </li>
           <li class="truthin-lending-miscellaneous5 list-item">
-            <span class="truthin-lending-text1">GPS</span>
+            <a href="file-dd-21111111111.html" class="truthin-lending-navlink5">
+              GPS
+            </a>
           </li>
           <li class="truthin-lending-file-validation-signatures list-item">
-            <a href="file-dd-2111.html" class="truthin-lending-navlink5">
+            <a href="file-dd-2111.html" class="truthin-lending-navlink6">
               Data Match
             </a>
           </li>
@@ -158,13 +160,13 @@
           Amount Financed
         </span>
         <button class="truthin-lending-save button">
-          <span class="truthin-lending-text2">Save</span>
+          <span class="truthin-lending-text1">Save</span>
         </button>
         <a href="file-dd-211111.html" class="truthin-lending-next button">
           <svg viewBox="0 0 1024 1024" class="truthin-lending-right-arrow">
             <path d="M366 708l196-196-196-196 60-60 256 256-256 256z"></path>
           </svg>
-          <span class="truthin-lending-text3">Next</span>
+          <span class="truthin-lending-text2">Next</span>
         </a>
         <input
           type="text"
