--- a/warranty.html
+++ b/warranty.html
@@ -98,10 +98,10 @@
             </a>
           </li>
           <li class="warranty-miscellaneous5 list-item">
-            <span class="warranty-text1">GPS</span>
+            <a href="file-dd-21111111111.html" class="warranty-navlink5">GPS</a>
           </li>
           <li class="warranty-file-validation-signatures list-item">
-            <a href="file-dd-2111.html" class="warranty-navlink5">Data Match</a>
+            <a href="file-dd-2111.html" class="warranty-navlink6">Data Match</a>
           </li>
           <svg viewBox="0 0 1024 1024" class="warranty-check">
             <path
@@ -143,13 +143,13 @@
           Serial Number
         </span>
         <button class="warranty-save button">
-          <span class="warranty-text2">Save</span>
+          <span class="warranty-text1">Save</span>
         </button>
         <a href="file-dd-21111111.html" class="warranty-next button">
           <svg viewBox="0 0 1024 1024" class="warranty-right-arrow">
             <path d="M366 708l196-196-196-196 60-60 256 256-256 256z"></path>
           </svg>
-          <span class="warranty-text3">Next</span>
+          <span class="warranty-text2">Next</span>
         </a>
         <input
           type="text"
