--- a/contract-fees.html
+++ b/contract-fees.html
@@ -126,7 +126,9 @@
         <span class="contract-fees-file-due-diligence">File Due Diligence</span>
         <span class="contract-fees-initial-file-validation">Fees</span>
         <span class="contract-fees-initial-file-validation1">Contract</span>
-        <a href=".html" class="contract-fees-inventory">Inventory</a>
+        <a href="file-val-signatures.html" class="contract-fees-inventory">
+          Inventory
+        </a>
         <span class="contract-fees-slash">/</span>
         <span class="contract-fees-slash1">/</span>
         <span class="contract-fees-do-you-have-the-file">Assignment?</span>
@@ -217,14 +219,30 @@
           placeholder="placeholder"
           class="contract-fees-textinput10 input"
         />
-        <input type="radio" name="cobuyer" class="contract-fees-radiobutton" />
-        <input type="radio" name="cobuyer" class="contract-fees-radiobutton1" />
-        <input type="radio" name="cobuyer" class="contract-fees-radiobutton2" />
-        <input type="radio" name="cobuyer" class="contract-fees-radiobutton3" />
-        <input type="radio" name="cobuyer" class="contract-fees-radiobutton4" />
-        <input type="radio" name="cobuyer" class="contract-fees-radiobutton5" />
-        <input type="radio" name="cobuyer" class="contract-fees-radiobutton6" />
-        <input type="radio" name="cobuyer" class="contract-fees-radiobutton7" />
+        <input type="radio" name="Stamp" class="contract-fees-radiobutton" />
+        <input
+          type="radio"
+          name="Structure"
+          class="contract-fees-radiobutton1"
+        />
+        <input type="radio" name="NSF" class="contract-fees-radiobutton2" />
+        <input
+          type="radio"
+          name="Assignment"
+          class="contract-fees-radiobutton3"
+        />
+        <input type="radio" name="Stamp" class="contract-fees-radiobutton4" />
+        <input
+          type="radio"
+          name="Structure"
+          class="contract-fees-radiobutton5"
+        />
+        <input type="radio" name="NSF" class="contract-fees-radiobutton6" />
+        <input
+          type="radio"
+          name="Assignment"
+          class="contract-fees-radiobutton7"
+        />
         <span class="contract-fees-is-there-a-cobuyer">Yes</span>
         <span class="contract-fees-is-there-a-cobuyer1">Yes</span>
         <span class="contract-fees-is-there-a-cobuyer2">Yes</span>
