--- a/data-match.html
+++ b/data-match.html
@@ -5,7 +5,7 @@
     <title>4. Data Match - CORE DD</title>
     <meta property="og:title" content="4. Data Match - CORE DD" />
     <meta property="og:title" content="8. GAP - CORE DD" />
-    <meta property="og:title" content="CORE DD" />
+    <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
@@ -114,7 +114,9 @@
         </span>
         <span class="data-match-file-due-diligence">File Due Diligence</span>
         <span class="data-match-initial-file-validation">Data Match</span>
-        <a href=".html" class="data-match-inventory">Inventory</a>
+        <a href="file-val-signatures.html" class="data-match-inventory">
+          Inventory
+        </a>
         <span class="data-match-slash">/</span>
         <span class="data-match-slash1">/</span>
         <span class="data-match-do-you-have-the-file">Year</span>
