--- a/file-val-signatures.html
+++ b/file-val-signatures.html
@@ -2,8 +2,8 @@
 
 <html lang="en">
   <head>
-    <title>CORE DD</title>
-    <meta property="og:title" content="CORE DD" />
+    <title>1. File Val. &amp; Signatures - CORE DD</title>
+    <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
@@ -192,12 +192,12 @@
         </a>
         <input
           type="radio"
-          name="cobuyer"
+          name="File"
           class="file-val-signatures-radiobutton"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="File"
           class="file-val-signatures-radiobutton01"
         />
         <input
@@ -212,72 +212,72 @@
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="signature"
           class="file-val-signatures-radiobutton04"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="initials"
           class="file-val-signatures-radiobutton05"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="dealer"
           class="file-val-signatures-radiobutton06"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="cobuyer2"
           class="file-val-signatures-radiobutton07"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="buyer"
           class="file-val-signatures-radiobutton08"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="contract"
           class="file-val-signatures-radiobutton09"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="contract"
           class="file-val-signatures-radiobutton10"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="hand"
           class="file-val-signatures-radiobutton11"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="hand"
           class="file-val-signatures-radiobutton12"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="signature"
           class="file-val-signatures-radiobutton13"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="initials"
           class="file-val-signatures-radiobutton14"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="dealer"
           class="file-val-signatures-radiobutton15"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="cobuyer2"
           class="file-val-signatures-radiobutton16"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="buyer"
           class="file-val-signatures-radiobutton17"
         />
       </div>
