--- a/g-p-s.html
+++ b/g-p-s.html
@@ -132,7 +132,7 @@
         </span>
         <span class="g-p-s-file-due-diligence">File Due Diligence</span>
         <span class="g-p-s-initial-file-validation"><span>GPS</span></span>
-        <a href=".html" class="g-p-s-inventory">Inventory</a>
+        <a href="file-val-signatures.html" class="g-p-s-inventory">Inventory</a>
         <span class="g-p-s-slash">/</span>
         <span class="g-p-s-slash1">/</span>
         <span class="g-p-s-do-you-have-the-file">Tracking Device?</span>
@@ -148,15 +148,9 @@
         <span class="g-p-s-do-you-have-the-file8">GPS Indicator?</span>
         <span class="g-p-s-is-this-an-original-contract">Vehicle</span>
         <span class="g-p-s-is-there-anything-handwritten">GPS Providor</span>
-        <button class="g-p-s-save button">
-          <span class="g-p-s-text2">Save</span>
-        </button>
-        <button type="button" class="g-p-s-next button">
-          <svg viewBox="0 0 1024 1024" class="g-p-s-right-arrow">
-            <path d="M366 708l196-196-196-196 60-60 256 256-256 256z"></path>
-          </svg>
-          <span class="g-p-s-text3">Next</span>
-        </button>
+        <a href=".html" class="g-p-s-save button">
+          <span class="g-p-s-text2">Done</span>
+        </a>
         <input
           type="text"
           placeholder="If Different"
@@ -187,22 +181,22 @@
           placeholder="Dave Johnson"
           class="g-p-s-textinput5 input"
         />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton01" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton02" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton03" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton04" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton05" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton06" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton07" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton08" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton09" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton10" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton11" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton12" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton13" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton14" />
-        <input type="radio" name="cobuyer" class="g-p-s-radiobutton15" />
+        <input type="radio" name="Tracking" class="g-p-s-radiobutton" />
+        <input type="radio" name="Disclosure" class="g-p-s-radiobutton01" />
+        <input type="radio" name="Interrupter" class="g-p-s-radiobutton02" />
+        <input type="radio" name="Contract" class="g-p-s-radiobutton03" />
+        <input type="radio" name="Form" class="g-p-s-radiobutton04" />
+        <input type="radio" name="Delinquent" class="g-p-s-radiobutton05" />
+        <input type="radio" name="Signed" class="g-p-s-radiobutton06" />
+        <input type="radio" name="Indicator" class="g-p-s-radiobutton07" />
+        <input type="radio" name="Tracking" class="g-p-s-radiobutton08" />
+        <input type="radio" name="Disclosure" class="g-p-s-radiobutton09" />
+        <input type="radio" name="Interrupter" class="g-p-s-radiobutton10" />
+        <input type="radio" name="Contract" class="g-p-s-radiobutton11" />
+        <input type="radio" name="Form" class="g-p-s-radiobutton12" />
+        <input type="radio" name="Delinquent" class="g-p-s-radiobutton13" />
+        <input type="radio" name="Signed" class="g-p-s-radiobutton14" />
+        <input type="radio" name="Indicator" class="g-p-s-radiobutton15" />
         <span class="g-p-s-is-there-a-cobuyer">Yes</span>
         <span class="g-p-s-is-there-a-cobuyer01">Yes</span>
         <span class="g-p-s-is-there-a-cobuyer02">Yes</span>
