--- a/service-contract.html
+++ b/service-contract.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="9. Service Contract - CORE DD" />
     <meta property="og:title" content="4. Data Match - CORE DD" />
     <meta property="og:title" content="8. GAP - CORE DD" />
-    <meta property="og:title" content="CORE DD" />
+    <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
@@ -148,7 +148,9 @@
         <span class="service-contract-initial-file-validation">
           Service Contract
         </span>
-        <a href=".html" class="service-contract-inventory">Inventory</a>
+        <a href="file-val-signatures.html" class="service-contract-inventory">
+          Inventory
+        </a>
         <span class="service-contract-slash">/</span>
         <span class="service-contract-slash1">/</span>
         <span class="service-contract-do-you-have-the-file">
@@ -271,12 +273,12 @@
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Borrowers"
           class="service-contract-radiobutton"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Borrowers"
           class="service-contract-radiobutton1"
         />
         <span class="service-contract-is-there-a-cobuyer">Yes</span>
