--- a/supp-contracts.html
+++ b/supp-contracts.html
@@ -75,7 +75,7 @@
             <span class="supp-contracts-text">Supplementary Contracts</span>
           </li>
           <li class="supp-contracts-file-validation-signatures list-item">
-            <a href=".html" class="supp-contracts-navlink1">
+            <a href="file-val-signatures.html" class="supp-contracts-navlink1">
               File Validation &amp; Signatures
             </a>
           </li>
@@ -114,9 +114,7 @@
         <span class="supp-contracts-is-there-a-cobuyer05">
           Odometer Statement?
         </span>
-        <span class="supp-contracts-is-there-a-cobuyer06">
-          Proof of Income?
-        </span>
+        <span class="supp-contracts-is-there-a-cobuyer06">Insurance?</span>
         <span class="supp-contracts-is-there-a-cobuyer07">
           Proof of Income?
         </span>
@@ -177,172 +175,128 @@
           </svg>
           <span class="supp-contracts-text2">Next</span>
         </a>
-        <input type="radio" name="cobuyer" class="supp-contracts-radiobutton" />
         <input
           type="radio"
-          name="cobuyer"
+          name="Warranty"
+          class="supp-contracts-radiobutton"
+        />
+        <input
+          type="radio"
+          name="Warranty"
           class="supp-contracts-radiobutton01"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Service"
           class="supp-contracts-radiobutton02"
         />
+        <input type="radio" name="Title" class="supp-contracts-radiobutton03" />
         <input
           type="radio"
-          name="cobuyer"
-          class="supp-contracts-radiobutton03"
-        />
-        <input
-          type="radio"
-          name="cobuyer"
+          name="Contract"
           class="supp-contracts-radiobutton04"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="License"
           class="supp-contracts-radiobutton05"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Reference"
           class="supp-contracts-radiobutton06"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Income"
           class="supp-contracts-radiobutton07"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Insurance"
           class="supp-contracts-radiobutton08"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Odometer"
           class="supp-contracts-radiobutton09"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Residency"
           class="supp-contracts-radiobutton10"
         />
+        <input type="radio" name="Keys" class="supp-contracts-radiobutton11" />
         <input
           type="radio"
-          name="cobuyer"
-          class="supp-contracts-radiobutton11"
-        />
-        <input
-          type="radio"
-          name="cobuyer"
+          name="Credit"
           class="supp-contracts-radiobutton12"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Buyers"
           class="supp-contracts-radiobutton13"
         />
+        <input type="radio" name="Order" class="supp-contracts-radiobutton14" />
+        <input type="radio" name="GPS" class="supp-contracts-radiobutton15" />
         <input
           type="radio"
-          name="cobuyer"
-          class="supp-contracts-radiobutton14"
-        />
-        <input
-          type="radio"
-          name="cobuyer"
-          class="supp-contracts-radiobutton15"
-        />
-        <input
-          type="radio"
-          name="cobuyer"
+          name="Service"
           class="supp-contracts-radiobutton16"
         />
+        <input type="radio" name="Title" class="supp-contracts-radiobutton17" />
         <input
           type="radio"
-          name="cobuyer"
-          class="supp-contracts-radiobutton17"
-        />
-        <input
-          type="radio"
-          name="cobuyer"
+          name="Contract"
           class="supp-contracts-radiobutton18"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="License"
           class="supp-contracts-radiobutton19"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Reference"
           class="supp-contracts-radiobutton20"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Income"
           class="supp-contracts-radiobutton21"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Insurance"
           class="supp-contracts-radiobutton22"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Odometer"
           class="supp-contracts-radiobutton23"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Residency"
           class="supp-contracts-radiobutton24"
         />
+        <input type="radio" name="Keys" class="supp-contracts-radiobutton25" />
         <input
           type="radio"
-          name="cobuyer"
-          class="supp-contracts-radiobutton25"
-        />
-        <input
-          type="radio"
-          name="cobuyer"
+          name="Credit"
           class="supp-contracts-radiobutton26"
         />
         <input
           type="radio"
-          name="cobuyer"
+          name="Buyers"
           class="supp-contracts-radiobutton27"
         />
-        <input
-          type="radio"
-          name="cobuyer"
-          class="supp-contracts-radiobutton28"
-        />
-        <input
-          type="radio"
-          name="cobuyer"
-          class="supp-contracts-radiobutton29"
-        />
-        <input
-          type="radio"
-          name="cobuyer"
-          class="supp-contracts-radiobutton30"
-        />
-        <input
-          type="radio"
-          name="cobuyer"
-          class="supp-contracts-radiobutton31"
-        />
-        <input
-          type="radio"
-          name="cobuyer"
-          class="supp-contracts-radiobutton32"
-        />
-        <input
-          type="radio"
-          name="cobuyer"
-          class="supp-contracts-radiobutton33"
-        />
+        <input type="radio" name="Order" class="supp-contracts-radiobutton28" />
+        <input type="radio" name="GPS" class="supp-contracts-radiobutton29" />
+        <input type="radio" name="CPI" class="supp-contracts-radiobutton30" />
+        <input type="radio" name="CPI" class="supp-contracts-radiobutton31" />
+        <input type="radio" name="GAP" class="supp-contracts-radiobutton32" />
+        <input type="radio" name="GAP" class="supp-contracts-radiobutton33" />
       </div>
     </div>
   </body>
