--- a/title.html
+++ b/title.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="9. Service Contract - CORE DD" />
     <meta property="og:title" content="4. Data Match - CORE DD" />
     <meta property="og:title" content="8. GAP - CORE DD" />
-    <meta property="og:title" content="CORE DD" />
+    <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
@@ -135,7 +135,7 @@
         </span>
         <span class="title-file-due-diligence">File Due Diligence</span>
         <span class="title-initial-file-validation"><span>Title</span></span>
-        <a href=".html" class="title-inventory">Inventory</a>
+        <a href="file-val-signatures.html" class="title-inventory">Inventory</a>
         <span class="title-slash">/</span>
         <span class="title-slash1">/</span>
         <span class="title-do-you-have-the-file">Title Branded?</span>
@@ -217,12 +217,12 @@
           placeholder="Dave Johnson"
           class="title-textinput11 input"
         />
-        <input type="radio" name="cobuyer" class="title-radiobutton" />
-        <input type="radio" name="cobuyer" class="title-radiobutton1" />
-        <input type="radio" name="cobuyer" class="title-radiobutton2" />
-        <input type="radio" name="cobuyer" class="title-radiobutton3" />
-        <input type="radio" name="cobuyer" class="title-radiobutton4" />
-        <input type="radio" name="cobuyer" class="title-radiobutton5" />
+        <input type="radio" name="Title" class="title-radiobutton" />
+        <input type="radio" name="issues" class="title-radiobutton1" />
+        <input type="radio" name="originator" class="title-radiobutton2" />
+        <input type="radio" name="Title" class="title-radiobutton3" />
+        <input type="radio" name="issues" class="title-radiobutton4" />
+        <input type="radio" name="originator" class="title-radiobutton5" />
         <span class="title-is-there-a-cobuyer">Yes</span>
         <span class="title-is-there-a-cobuyer1">Yes</span>
         <span class="title-is-there-a-cobuyer2">Yes</span>
