--- a/truthin-lending.html
+++ b/truthin-lending.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="9. Service Contract - CORE DD" />
     <meta property="og:title" content="4. Data Match - CORE DD" />
     <meta property="og:title" content="8. GAP - CORE DD" />
-    <meta property="og:title" content="CORE DD" />
+    <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
@@ -133,7 +133,9 @@
         <span class="truthin-lending-initial-file-validation">
           Truth in Lending
         </span>
-        <a href=".html" class="truthin-lending-inventory">Inventory</a>
+        <a href="file-val-signatures.html" class="truthin-lending-inventory">
+          Inventory
+        </a>
         <span class="truthin-lending-slash">/</span>
         <span class="truthin-lending-slash1">/</span>
         <span class="truthin-lending-do-you-have-the-file">Deferred Down</span>
