--- a/warranty.html
+++ b/warranty.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="9. Service Contract - CORE DD" />
     <meta property="og:title" content="4. Data Match - CORE DD" />
     <meta property="og:title" content="8. GAP - CORE DD" />
-    <meta property="og:title" content="CORE DD" />
+    <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
@@ -127,7 +127,9 @@
         </span>
         <span class="warranty-file-due-diligence">File Due Diligence</span>
         <span class="warranty-initial-file-validation">Warranty</span>
-        <a href=".html" class="warranty-inventory">Inventory</a>
+        <a href="file-val-signatures.html" class="warranty-inventory">
+          Inventory
+        </a>
         <span class="warranty-slash">/</span>
         <span class="warranty-slash1">/</span>
         <span class="warranty-do-you-have-the-file">Term Months</span>
@@ -171,10 +173,10 @@
           placeholder="placeholder"
           class="warranty-textinput3 input"
         />
-        <input type="radio" name="cobuyer" class="warranty-radiobutton" />
-        <input type="radio" name="cobuyer" class="warranty-radiobutton1" />
-        <input type="radio" name="cobuyer" class="warranty-radiobutton2" />
-        <input type="radio" name="cobuyer" class="warranty-radiobutton3" />
+        <input type="radio" name="RIC" class="warranty-radiobutton" />
+        <input type="radio" name="Warranty" class="warranty-radiobutton1" />
+        <input type="radio" name="RIC" class="warranty-radiobutton2" />
+        <input type="radio" name="Warranty" class="warranty-radiobutton3" />
         <span class="warranty-is-there-a-cobuyer">Yes</span>
         <span class="warranty-is-there-a-cobuyer1">Yes</span>
         <span class="warranty-is-there-a-cobuyer2">No</span>
