--- a/g-a-p.html
+++ b/g-a-p.html
@@ -4,7 +4,7 @@
   <head>
     <title>8. GAP - CORE DD</title>
     <meta property="og:title" content="8. GAP - CORE DD" />
-    <meta property="og:title" content="CORE DD" />
+    <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
@@ -124,7 +124,7 @@
         </span>
         <span class="g-a-p-file-due-diligence">File Due Diligence</span>
         <span class="g-a-p-initial-file-validation">GAP</span>
-        <a href=".html" class="g-a-p-inventory">Inventory</a>
+        <a href="file-val-signatures.html" class="g-a-p-inventory">Inventory</a>
         <span class="g-a-p-slash">/</span>
         <span class="g-a-p-slash1">/</span>
         <span class="g-a-p-do-you-have-the-file">Signed By All Borrowers?</span>
@@ -225,8 +225,8 @@
           placeholder="DFW Auto Franchise"
           class="g-a-p-textinput15 input"
         />
-        <input type="radio" name="cobuyer" class="g-a-p-radiobutton" />
-        <input type="radio" name="cobuyer" class="g-a-p-radiobutton1" />
+        <input type="radio" name="Borrowers" class="g-a-p-radiobutton" />
+        <input type="radio" name="Borrowers" class="g-a-p-radiobutton1" />
         <span class="g-a-p-is-there-a-cobuyer">Yes</span>
         <span class="g-a-p-is-there-a-cobuyer1">No</span>
       </div>
