--- a/misc.html
+++ b/misc.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="9. Service Contract - CORE DD" />
     <meta property="og:title" content="4. Data Match - CORE DD" />
     <meta property="og:title" content="8. GAP - CORE DD" />
-    <meta property="og:title" content="CORE DD" />
+    <meta property="og:title" content="1. File Val. & Signatures - CORE DD" />
     <meta property="og:title" content="6. Contract & Fees - CORE DD" />
     <meta property="og:title" content="2. Supp. Contracts - CORE DD" />
     <meta property="og:title" content="11. GPS - CORE DD" />
@@ -79,7 +79,7 @@
             </a>
           </li>
           <li class="misc-file-validation-signatures list-item">
-            <a href=".html" class="misc-navlink1">
+            <a href="file-val-signatures.html" class="misc-navlink1">
               File Validation &amp; Signatures
             </a>
           </li>
@@ -159,32 +159,32 @@
           </svg>
           <span class="misc-text2">Next</span>
         </a>
-        <input type="radio" name="cobuyer" class="misc-radiobutton" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton01" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton02" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton03" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton04" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton05" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton06" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton07" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton08" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton09" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton10" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton11" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton12" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton13" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton14" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton15" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton16" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton17" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton18" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton19" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton20" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton21" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton22" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton23" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton24" />
-        <input type="radio" name="cobuyer" class="misc-radiobutton25" />
+        <input type="radio" name="Disclaimer" class="misc-radiobutton" />
+        <input type="radio" name="Disclaimer" class="misc-radiobutton01" />
+        <input type="radio" name="Address" class="misc-radiobutton02" />
+        <input type="radio" name="Defects" class="misc-radiobutton03" />
+        <input type="radio" name="Credit" class="misc-radiobutton04" />
+        <input type="radio" name="Privacy" class="misc-radiobutton05" />
+        <input type="radio" name="Carfax" class="misc-radiobutton06" />
+        <input type="radio" name="Contact" class="misc-radiobutton07" />
+        <input type="radio" name="Agreement" class="misc-radiobutton08" />
+        <input type="radio" name="NADA" class="misc-radiobutton09" />
+        <input type="radio" name="Vehicle" class="misc-radiobutton10" />
+        <input type="radio" name="OFAC" class="misc-radiobutton11" />
+        <input type="radio" name="Address" class="misc-radiobutton12" />
+        <input type="radio" name="Defects" class="misc-radiobutton13" />
+        <input type="radio" name="Credit" class="misc-radiobutton14" />
+        <input type="radio" name="Privacy" class="misc-radiobutton15" />
+        <input type="radio" name="Carfax" class="misc-radiobutton16" />
+        <input type="radio" name="Contact" class="misc-radiobutton17" />
+        <input type="radio" name="Agreement" class="misc-radiobutton18" />
+        <input type="radio" name="NADA" class="misc-radiobutton19" />
+        <input type="radio" name="Vehicle" class="misc-radiobutton20" />
+        <input type="radio" name="OFAC" class="misc-radiobutton21" />
+        <input type="radio" name="Schedule" class="misc-radiobutton22" />
+        <input type="radio" name="Schedule" class="misc-radiobutton23" />
+        <input type="radio" name="Repossession" class="misc-radiobutton24" />
+        <input type="radio" name="Repossession" class="misc-radiobutton25" />
       </div>
     </div>
   </body>
