--- a/data-match.html
+++ b/data-match.html
@@ -59,44 +59,46 @@
               d="M512 662q62 0 106-44t44-106-44-106-106-44-106 44-44 106 44 106 106 44zM830 554l90 70q14 10 4 28l-86 148q-8 14-26 8l-106-42q-42 30-72 42l-16 112q-4 18-20 18h-172q-16 0-20-18l-16-112q-38-16-72-42l-106 42q-18 6-26-8l-86-148q-10-18 4-28l90-70q-2-14-2-42t2-42l-90-70q-14-10-4-28l86-148q8-14 26-8l106 42q42-30 72-42l16-112q4-18 20-18h172q16 0 20 18l16 112q38 16 72 42l106-42q18-6 26 8l86 148q10 18-4 28l-90 70q2 14 2 42t-2 42z"
             ></path>
           </svg>
-          <img
-            alt="image"
-            src="public/playground_assets/core%20logo%203-200h.png"
-            class="data-match-logo"
-          />
+          <a href=".html" class="data-match-navlink">
+            <img
+              alt="image"
+              src="public/playground_assets/core%20logo%203-200h.png"
+              class="data-match-logo"
+            />
+          </a>
         </div>
         <div class="data-match-side-nav-bar">
           <span class="data-match-loan-name">872346 Jackson Smith</span>
           <li class="data-match-supplementary-contracts list-item">
-            <a href="file-dd-21111.html" class="data-match-navlink">
+            <a href="file-dd-21111.html" class="data-match-navlink1">
               Truth in Lending
             </a>
           </li>
           <li class="data-match-miscellaneous list-item">
-            <a href="file-dd-211111.html" class="data-match-navlink1">
+            <a href="file-dd-211111.html" class="data-match-navlink2">
               Contract &amp; Fees
             </a>
           </li>
           <li class="data-match-miscellaneous1 list-item">
-            <a href="file-dd-2111111.html" class="data-match-navlink2">
+            <a href="file-dd-2111111.html" class="data-match-navlink3">
               Warranty
             </a>
           </li>
           <li class="data-match-miscellaneous2 list-item">
-            <a href="file-dd-21111111.html" class="data-match-navlink3">GAP</a>
+            <a href="file-dd-21111111.html" class="data-match-navlink4">GAP</a>
           </li>
           <li class="data-match-miscellaneous3 list-item">
-            <a href="file-dd-211111111.html" class="data-match-navlink4">
+            <a href="file-dd-211111111.html" class="data-match-navlink5">
               Service Contract
             </a>
           </li>
           <li class="data-match-miscellaneous4 list-item">
-            <a href="file-dd-2111111111.html" class="data-match-navlink5">
+            <a href="file-dd-2111111111.html" class="data-match-navlink6">
               Title
             </a>
           </li>
           <li class="data-match-miscellaneous5 list-item">
-            <a href="file-dd-21111111111.html" class="data-match-navlink6">
+            <a href="file-dd-21111111111.html" class="data-match-navlink7">
               GPS
             </a>
           </li>
